# phanes

./: .clang-format  .clang-tidy  .clangd  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DUPLICATE_ROADMAP.md  Note.txt  README.md  TODO
.github/workflows/: build.yml  cmake-multi-platform.yml  codeql.yml  format.yml
benchmark/: CMakeLists.txt  bench_deque.cpp  bench_duplicates.cpp  bench_hasher.cpp  bench_main.cpp  bench_tree.cpp  plot_results.py
src/: CMakeLists.txt  main.cpp
src/analysis/: analyzer.cpp  analyzer.ixx
src/analyzer/: analyzer.cpp  analyzer.ixx  duplicates.cpp  hasher.cpp
src/builder/: builder.cpp  builder.ixx  deque.cpp  scheduler.cpp
src/core/: core.cpp  core.ixx
src/parser/: parser.cpp  parser.ixx
src/view/: executor.ixx  view.cpp  view.ixx
tests/: CMakeLists.txt  analyzer_test.cpp  builder_test.cpp  hasher_test.cpp  parser_test.cpp  view_test.cpp
